Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2023/08/15:
- TestEngine: Added IO.CheckDrawDataIntegrity helper (mostly for use by test suite).

2023/07/11:
- TestEngine: Fixed an issue accessing tabs in a TabBar without scrolling policy.

2023/06/23:
- TestEngine: Fixed two case where DockInto() would fail if one or both windows are already docked.

2023/06/22:
- TestEngine: Fixed WindowClose() support when window Docked.

2023/06/21:
- TestEngine: in helper ImGuiTestGenericItemStatus storage struct,
  renamed 'bool Ret' to 'bool RetValue' as it is less ambiguous.
- TestEngine: Added ViewportPlatform_CloseWindow() function to simulate platform closure
  (e.g. ALT+F4 on Windows with viewport enabled and OS decoration enabled) for the purpose
  of testing viewport-specific features. Probably of little use to regular end-user.

2023/06/14
- TestEngine: ItemInfoOpenFullPath() can focus/select inactive docked windows.
  (similar to e.g. opening an intermediary tree node).

2023/06/08
- TestEngine: Made failed IM_CHECK() with io.ConfigBreakOnError enabled call IM_DEBUG_BREAK()
  directly instead of calling IM_ASSERT(0).
- TestEngine: Moved suggested IM_ASSERT() override out of test engine's imconfig.h and
  into our TestSuite's imconfig.h.

2023/05/31
- TestEngine: Added ctx->ItemIsChecked() and ctx->ItemIsOpened() helpers.

2023/05/30:
- TestEngine: Attempt to resize host window when aiming at a clipped item within menu layer.
  (which is non-scrolling).
- TestEngine: Mock viewport emulation transfer platform focus when a viewport is destroyed.

2023/05/09:
- TestEngine: Added IsWarmUpGuiFrame() query to avoid polling frame-count.

2023/04/26:
- TestEngine: Reworked mouse actions to avoid unnecessarily focusing windows if not necessary.